[package]
name = "boids-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"
flume = "0.11.0"
futures = "0.3.30"
futures-intrusive = "0.5.0"
nannou = "0.19.0"
nannou_egui = "0.19.0"
pollster = "0.3.0"
re_ui = "0.14.1"
